--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: mr
 Type: Package
-Title: Generate, Show and Play Musical Score in R Markdown, RStudio or Browser
+Title: Generate Musical Score in R Markdown or RStudio
 Version: 1.0.0
 Author: Renfei Mao
 Maintainer: Renfei Mao <renfeimao@gmail.com>
 Description: An elegant and intuitive system for representing musical scores,
-    and generating and displaying them painlessly in R Markdown or RStudio.
-    You only tell "mr" the structure of your music, and it takes care of all
-    the dirty technical details.
+    and generating, showing and playing them painlessly in R Markdown or
+    RStudio. You only tell "mr" the structure of your music, and it takes care
+    of all the dirty technical details.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -27,3 +27,4 @@ Imports:
     tools,
     utils,
     whisker
+Roxygen: list(markdown = TRUE)
