--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Suggests: 
+    rmarkdown,
     testthat
 Imports:
     glue,
@@ -28,3 +29,4 @@ Imports:
     utils,
     whisker
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
