--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("+",ClefLine)
 S3method("+",KeyLine)
 S3method("+",MeterLine)
 S3method("+",Music)
+S3method("+",TempoLine)
 S3method("==",Pitch)
 S3method(check_duration,character)
 S3method(check_duration,numeric)
@@ -39,6 +40,8 @@ S3method(print,PitchValue)
 S3method(print,PositionLine)
 S3method(print,Rest)
 S3method(print,Score)
+S3method(print,Tempo)
+S3method(print,TempoLine)
 S3method(print,Tupler)
 S3method(show,Music)
 S3method(to_Duration,Duration)
@@ -71,6 +74,7 @@ export(Key)
 export(Line)
 export(Meter)
 export(Music)
+export(Tempo)
 export(Tupler)
 export(check_duration)
 export(check_positions_content)
