--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ S3method(to_Element,Pitch)
 S3method(to_Element,PitchRest)
 S3method(to_Element,Rest)
 S3method(to_Element,Score)
+S3method(to_Element,Tempo)
 S3method(to_Pitch,Line)
 S3method(to_Pitch,Music)
 S3method(to_Pitch,PitchChord)
