Replace `tools::file_path_sans_ext`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,7 @@ Imports:
     rlang,
     rstudioapi,
     stringr,
-    tools,
-    utils,
+    utils
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 SystemRequirements: MuseScore - https://musescore.org/
