--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: mr
 Type: Package
-Title: Generate Musical Score in R Markdown and RStudio
+Title: Create Musical Scores Easily and Show Them Anywhere
 Version: 1.0.0
 Author: Renfei Mao
 Maintainer: Renfei Mao <renfeimao@gmail.com>
-Description: An elegant and intuitive system for representing musical scores,
-    and generating, showing and playing them painlessly in R Markdown and
-    RStudio. You only tell "mr" the structure of your music, and it takes care
-    of all the dirty technical details.
+Description: mr provides a simple and intuitive language, with which you can
+    create musical scores easily. Also, mr works in R Markdown files, R Jupyter
+    Notebooks and RStudio, so you can embed scores anywhere. You only tell mr
+    the structure of your music, and it takes care of all the dirty technical
+    details.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
