Export `add` and its methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,11 @@ S3method("+",MeterLine)
 S3method("+",Music)
 S3method("+",TempoLine)
 S3method("==",Pitch)
+S3method(add,Clef)
+S3method(add,Key)
+S3method(add,Line)
+S3method(add,Meter)
+S3method(add,Tempo)
 S3method(check_duration,character)
 S3method(check_duration,numeric)
 S3method(check_positions_content,list)
@@ -77,6 +82,7 @@ export(Meter)
 export(Music)
 export(Tempo)
 export(Tupler)
+export(add)
 export(check_duration)
 export(check_positions_content)
 export(check_positions_length)
