Modify `Description` in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Title: Generate Musical Scores Easily and Show Them Anywhere
 Version: 1.0.0
 Author: Renfei Mao
 Maintainer: Renfei Mao <renfeimao@gmail.com>
-Description: mr provides a simple and intuitive language, with which you can
-    create musical scores and audio files easily. Also, mr works in R Markdown
-    documents, R Jupyter Notebooks and RStudio, so you can embed scores and
-    audio files anywhere. You only tell mr the structure of your music, and it
-    takes care of all the dirty technical details.
+Description: Provides a simple and intuitive language, with which you can
+    create complex music easily. Takes care of all the dirty technical
+    details in converting your music to musical scores and audio files.
+    Works in R Markdown documents, R Jupyter Notebooks and RStudio, so you
+    can embed musical scores and audio files anywhere.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
