--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: Provides a simple and intuitive language, with which you can
     MusicXML <https://www.musicxml.com/> to represent musical scores, and
     MuseScore <https://musescore.org/> to convert MusicXML.
 License: MIT + file LICENSE
+URL: https://github.com/flujoo/gm, https://flujoo.github.io/gm/
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
