--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,12 @@ Maintainer: Renfei Mao <renfeimao@gmail.com>
 Description: Provides a simple and intuitive language, with which you can
     create complex music easily. Takes care of all the dirty technical
     details in converting your music to musical scores and audio files.
-    Works in R Markdown documents, R Jupyter Notebooks and RStudio, so you
-    can embed musical scores and audio files anywhere. Internally, uses
-    MusicXML <https://www.musicxml.com/> to represent musical scores, and
-    MuseScore <https://musescore.org/> to convert MusicXML.
+    Works in 'R Markdown' documents <https://rmarkdown.rstudio.com/>,
+    R 'Jupyter Notebooks' <https://jupyter.org/>, and 'RStudio'
+    <https://rstudio.com/>, so you can embed musical scores and audio files
+    anywhere. Internally, uses 'MusicXML' <https://www.musicxml.com/> to
+    represent musical scores, and 'MuseScore' <https://musescore.org/> to
+    convert 'MusicXML'.
 License: MIT + file LICENSE
 URL: https://github.com/flujoo/gm, https://flujoo.github.io/gm/
 Encoding: UTF-8
