Refactor `normalize_pitch`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ S3method(check_positions_length,list)
 S3method(check_positions_length,numeric)
 S3method(export,Music)
 S3method(normalize_pitch,character)
-S3method(normalize_pitch,logical)
+S3method(normalize_pitch,default)
 S3method(normalize_pitch,numeric)
 S3method(print,Attributes)
 S3method(print,Clef)
