--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -17,3 +17,6 @@ navbar:
       href: "reference/index.html"
     - text: "Changelog"
       href: "news/index.html"
+
+template:
+  package: preferably
