Fix link in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Provides a simple and intuitive high-level language, with which
     details in converting your music to musical scores and audio files.
     Works in 'R Markdown' documents <https://rmarkdown.rstudio.com/>,
     R 'Jupyter Notebooks' <https://jupyter.org/>, and 'RStudio'
-    <https://rstudio.com/>, so you can embed generated music
+    <https://www.rstudio.com/>, so you can embed generated music
     anywhere. Internally, uses 'MusicXML' <https://www.musicxml.com/> to
     represent musical scores, and 'MuseScore' <https://musescore.org/> to
     convert 'MusicXML'.
