--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,13 @@ RoxygenNote: 7.3.1
 Suggests: 
     knitr,
     rmarkdown,
+    rstudioapi,
     shiny,
     testthat,
     tibble
 Imports:
-    erify
+    erify,
+    utils
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 SystemRequirements: MuseScore - https://musescore.org/
