--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gm
 Type: Package
-Title: Create Music With Ease
+Title: Create Music with Ease
 Version: 2.0.0
 Author: Renfei Mao
 Maintainer: Renfei Mao <renfeimao@gmail.com>
