--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,7 +5,7 @@ authors:
     href: https://github.com/flujoo
 
 home:
-  title: Create Music With R
+  title: Create Music with R
 
 navbar:
   left:
